--- a/charts/traefik-dashboard/ingressroute.yaml
+++ b/charts/traefik-dashboard/ingressroute.yaml
@@ -2,9 +2,10 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: dashboard
+  namespace: traefik-system
 spec:
   entryPoints:
-    - web
+    - websecure
   routes:
     - match: Host(`traefik.k8s.home.lex.la`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
       kind: Rule
