--- a/helmfile.d/dashboard.yaml
+++ b/helmfile.d/dashboard.yaml
@@ -16,6 +16,4 @@ releases:
             - dashboard.k8s.home.lex.la
           annotations:
             traefik.ingress.kubernetes.io/router.tls: "true"
-          # nginx spesific annotations:
-          #   kubernetes.io/ingress.class: nginx
-          #   nginx.ingress.kubernetes.io/secure-backends: "true"
+            traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
