--- a/charts/longhorn/templates/crds.yaml
+++ b/charts/longhorn/templates/crds.yaml
@@ -1,10 +1,8 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: Engine
-  annotations:
-    helm.sh/resource-policy: keep
   name: engines.longhorn.io
 spec:
   group: longhorn.io
@@ -16,37 +14,46 @@ spec:
     - lhe
     singular: engine
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: State
       type: string
       description: The current state of the engine
-      JSONPath: .status.currentState
+      jsonPath: .status.currentState
     - name: Node
       type: string
       description: The node that the engine is on
-      JSONPath: .spec.nodeID
+      jsonPath: .spec.nodeID
     - name: InstanceManager
       type: string
       description: The instance manager of the engine
-      JSONPath: .status.instanceManagerName
+      jsonPath: .status.instanceManagerName
     - name: Image
       type: string
       description: The current image of the engine
-      JSONPath: .status.currentImage
+      jsonPath: .status.currentImage
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: Replica
-  annotations:
-    helm.sh/resource-policy: keep
   name: replicas.longhorn.io
 spec:
   group: longhorn.io
@@ -58,41 +65,50 @@ spec:
     - lhr
     singular: replica
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: State
       type: string
       description: The current state of the replica
-      JSONPath: .status.currentState
+      jsonPath: .status.currentState
     - name: Node
       type: string
       description: The node that the replica is on
-      JSONPath: .spec.nodeID
+      jsonPath: .spec.nodeID
     - name: Disk
       type: string
       description: The disk that the replica is on
-      JSONPath: .spec.diskID
+      jsonPath: .spec.diskID
     - name: InstanceManager
       type: string
       description: The instance manager of the replica
-      JSONPath: .status.instanceManagerName
+      jsonPath: .status.instanceManagerName
     - name: Image
       type: string
       description: The current image of the replica
-      JSONPath: .status.currentImage
+      jsonPath: .status.currentImage
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: Setting
-  annotations:
-    helm.sh/resource-policy: keep
   name: settings.longhorn.io
 spec:
   group: longhorn.io
@@ -104,23 +120,27 @@ spec:
     - lhs
     singular: setting
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        x-kubernetes-preserve-unknown-fields: true
+    additionalPrinterColumns:
     - name: Value
       type: string
       description: The value of the setting
-      JSONPath: .value
+      jsonPath: .value
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: Volume
-  annotations:
-    helm.sh/resource-policy: keep
   name: volumes.longhorn.io
 spec:
   group: longhorn.io
@@ -132,41 +152,50 @@ spec:
     - lhv
     singular: volume
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: State
       type: string
       description: The state of the volume
-      JSONPath: .status.state
+      jsonPath: .status.state
     - name: Robustness
       type: string
       description: The robustness of the volume
-      JSONPath: .status.robustness
+      jsonPath: .status.robustness
     - name: Scheduled
       type: string
       description: The scheduled condition of the volume
-      JSONPath: .status.conditions['scheduled']['status']
+      jsonPath: .status.conditions['scheduled']['status']
     - name: Size
       type: string
       description: The size of the volume
-      JSONPath: .spec.size
+      jsonPath: .spec.size
     - name: Node
       type: string
       description: The node that the volume is currently attaching to
-      JSONPath: .status.currentNodeID
+      jsonPath: .status.currentNodeID
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: EngineImage
-  annotations:
-    helm.sh/resource-policy: keep
   name: engineimages.longhorn.io
 spec:
   group: longhorn.io
@@ -178,37 +207,46 @@ spec:
     - lhei
     singular: engineimage
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: State
       type: string
       description: State of the engine image
-      JSONPath: .status.state
+      jsonPath: .status.state
     - name: Image
       type: string
       description: The Longhorn engine image
-      JSONPath: .spec.image
+      jsonPath: .spec.image
     - name: RefCount
       type: integer
       description: Number of volumes are using the engine image
-      JSONPath: .status.refCount
+      jsonPath: .status.refCount
     - name: BuildDate
       type: date
       description: The build date of the engine image
-      JSONPath: .status.buildDate
+      jsonPath: .status.buildDate
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: Node
-  annotations:
-    helm.sh/resource-policy: keep
   name: nodes.longhorn.io
 spec:
   group: longhorn.io
@@ -220,33 +258,42 @@ spec:
     - lhn
     singular: node
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: Ready
       type: string
       description: Indicate whether the node is ready
-      JSONPath: .status.conditions['Ready']['status']
+      jsonPath: .status.conditions['Ready']['status']
     - name: AllowScheduling
       type: boolean
       description: Indicate whether the user disabled/enabled replica scheduling for the node
-      JSONPath: .spec.allowScheduling
+      jsonPath: .spec.allowScheduling
     - name: Schedulable
       type: string
       description: Indicate whether Longhorn can schedule replicas on the node
-      JSONPath: .status.conditions['Schedulable']['status']
+      jsonPath: .status.conditions['Schedulable']['status']
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   labels: {{- include "longhorn.labels" . | nindent 4 }}
     longhorn-manager: InstanceManager
-  annotations:
-    helm.sh/resource-policy: keep
   name: instancemanagers.longhorn.io
 spec:
   group: longhorn.io
@@ -258,22 +305,76 @@ spec:
     - lhim
     singular: instancemanager
   scope: Namespaced
-  version: v1beta1
-  additionalPrinterColumns:
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
     - name: State
       type: string
       description: The state of the instance manager
-      JSONPath: .status.currentState
+      jsonPath: .status.currentState
     - name: Type
       type: string
       description: The type of the instance manager (engine or replica)
-      JSONPath: .spec.type
+      jsonPath: .spec.type
     - name: Node
       type: string
       description: The node that the instance manager is running on
-      JSONPath: .spec.nodeID
+      jsonPath: .spec.nodeID
     - name: Age
       type: date
-      JSONPath: .metadata.creationTimestamp
-  subresources:
-    status: {}
+      jsonPath: .metadata.creationTimestamp
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
+  labels: {{- include "longhorn.labels" . | nindent 4 }}
+    longhorn-manager: ShareManager
+  name: sharemanagers.longhorn.io
+spec:
+  group: longhorn.io
+  names:
+    kind: ShareManager
+    listKind: ShareManagerList
+    plural: sharemanagers
+    shortNames:
+    - lhsm
+    singular: sharemanager
+  scope: Namespaced
+  versions:
+  - name: v1beta1
+    served: true
+    storage: true
+    schema:
+      openAPIV3Schema:
+        type: object
+        properties:
+          spec:
+            x-kubernetes-preserve-unknown-fields: true
+          status:
+            x-kubernetes-preserve-unknown-fields: true
+    subresources:
+      status: {}
+    additionalPrinterColumns:
+    - name: State
+      type: string
+      description: The state of the share manager
+      jsonPath: .status.state
+    - name: Node
+      type: string
+      description: The node that the share manager is owned by
+      jsonPath: .status.ownerID
+    - name: Age
+      type: date
+      jsonPath: .metadata.creationTimestamp
