--- a/charts/longhorn/templates/deployment-driver.yaml
+++ b/charts/longhorn/templates/deployment-driver.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: longhorn-driver-deployer
-  namespace: {{ include "release_namespace" . }}
+  namespace: {{ .Release.Namespace }}
   labels: {{- include "longhorn.labels" . | nindent 4 }}
 spec:
   replicas: 1
@@ -84,9 +84,9 @@ spec:
             value: {{ .Values.csi.snapshotterReplicaCount | quote }}
           {{- end }}
 
-      {{- if .Values.privateRegistry.registrySecret }}
+      {{- if .Values.defaultSettings.registrySecret }}
       imagePullSecrets:
-      - name: {{ .Values.privateRegistry.registrySecret }}
+      - name: {{ .Values.defaultSettings.registrySecret }}
       {{- end }}
       serviceAccountName: longhorn-service-account
       securityContext:
