--- a/helmfile.d/longhorn.yaml
+++ b/helmfile.d/longhorn.yaml
@@ -1,16 +1,14 @@
-# repositories:
-#   - name: longhorn
-#     url: https://charts.longhorn.io
-# https://artifacthub.io/packages/helm/longhorn/longhorn
-# https://longhorn.io/docs/1.0.2/deploy/install/install-with-helm
-# Replace local chart with official one asap
-# https://github.com/longhorn/longhorn/milestone/17
+repositories:
+  - name: longhorn
+    url: https://charts.longhorn.io
 
+# https://artifacthub.io/packages/helm/longhorn/longhorn
 releases:
   - name: longhorn
     namespace: longhorn-system
     installed: true
-    chart: ../charts/longhorn
+    chart: longhorn/longhorn
+    version: 1.1.0
     values:
       - defaultSettings:
           defaultDataPath: "/mnt/storage"
