--- a/charts/system-upgrade/plans/k3s-plan.yaml
+++ b/charts/system-upgrade/plans/k3s-plan.yaml
@@ -8,16 +8,15 @@ spec:
   cordon: true
   nodeSelector:
     matchExpressions:
-      - key: node-role.kubernetes.io/master
+      - key: node-role.kubernetes.io/control-plane
         operator: In
         values:
           - "true"
   serviceAccountName: system-upgrade
   upgrade:
     image: rancher/k3s-upgrade
-  channel: https://update.k3s.io/v1-release/channels/stable
+  channel: https://update.k3s.io/v1-release/channels/latest
 ---
-# Agent plan
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
 metadata:
@@ -28,7 +27,7 @@ spec:
   cordon: true
   nodeSelector:
     matchExpressions:
-      - key: node-role.kubernetes.io/master
+      - key: node-role.kubernetes.io/control-plane
         operator: DoesNotExist
   prepare:
     args:
@@ -38,4 +37,4 @@ spec:
   serviceAccountName: system-upgrade
   upgrade:
     image: rancher/k3s-upgrade
-  channel: https://update.k3s.io/v1-release/channels/stable
+  channel: https://update.k3s.io/v1-release/channels/latest
