--- a/helmfile.d/heimdall.yaml
+++ b/helmfile.d/heimdall.yaml
@@ -1,5 +1,5 @@
 repositories:
-  - name:  k8s-at-home
+  - name: k8s-at-home
     url: https://k8s-at-home.com/charts/
 
 releases:
@@ -8,7 +8,7 @@ releases:
     namespace: heimdall
     installed: true
     chart: k8s-at-home/heimdall
-    version: 4.2.1
+    version: 4.3.0
     values:
       - ingress:
           enabled: true
@@ -18,3 +18,6 @@ releases:
                 - path: /
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+        persistence:
+          config:
+            enabled: true
