--- a/helmfile.d/victoria-metrics-single.yaml
+++ b/helmfile.d/victoria-metrics-single.yaml
@@ -7,5 +7,5 @@ releases:
   - name: victoria-metrics-single
     namespace: monitoring
     chart: vm/victoria-metrics-single
-    version: 0.6.11
-    installed: true
+    version: 0.6.13
+    installed: false
