--- a/charts/system-upgrade/plans/regular/system-plan.yaml
+++ b/charts/system-upgrade/plans/regular/system-plan.yaml
@@ -9,6 +9,7 @@ stringData:
   upgrade.sh: |
     #!/bin/sh
     apt update && apt upgrade -y
+    apt autoremove -y
     if [ -f /var/run/reboot-required ]; then
       reboot
     fi
