--- a/helmfile.d/heimdall.yaml
+++ b/helmfile.d/heimdall.yaml
@@ -15,7 +15,7 @@ releases:
           hosts:
             - host: start.k8s.home.lex.la
               paths:
-                - path: "/"
+                - path: /
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         persistence:
