update watchdog plan

--- a/charts/system-upgrade/plans/once/watchdog.yaml
+++ b/charts/system-upgrade/plans/once/watchdog.yaml
@@ -20,7 +20,7 @@ stringData:
     temperature-device      = /sys/class/thermal/thermal_zone0/temp
     max-temperature         = 85
     ' > /etc/watchdog.conf
-    systemctl restart watchdog
+    systemctl enable --now watchdog
 ---
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
