--- a/helmfile.d/monitoring.yaml
+++ b/helmfile.d/monitoring.yaml
@@ -7,12 +7,29 @@ repositories:
 releases:    
   # https://github.com/VictoriaMetrics/helm-charts/tree/master/charts/victoria-metrics-k8s-stack
   - name: victoria-metrics-k8s-stack
-    namespace: monitoring-huetoring
+    namespace: monitoring
     chart: victoria-metrics/victoria-metrics-k8s-stack
     installed: true
     values:
       - grafana:
           enabled: false
+        vmsingle:
+          spec:
+            retentionPeriod: "12"
+            replicaCount: 1
+            removePvcAfterDelete: true
+            storage:
+              accessModes:
+                - ReadWriteOnce
+              resources:
+                requests:
+                  storage: 4Gi
+        vmagent:
+          enabled: true
+          spec:
+            scrapeInterval: 25s
+            extraArgs:
+              promscrape.streamParse: "true"
 
   - name: grafana
     namespace: monitoring
@@ -26,6 +43,7 @@ releases:
           annotations:
             traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         adminPassword: admin
+        ## Dashboards
         dashboards:
           default:
             victoriametrics:
@@ -44,6 +62,19 @@ releases:
               gnetId: 13032
               revision: 6
               datasource: VictoriaMetrics
+        dashboardProviders:
+          dashboardproviders.yaml:
+            apiVersion: 1
+            providers:
+            - name: 'default'
+              orgId: 1
+              folder: ''
+              type: file
+              disableDeletion: false
+              editable: true
+              options:
+                path: /var/lib/grafana/dashboards/default
+        ##
         datasources:
           datasources.yaml:
             apiVersion: 1
@@ -58,7 +89,6 @@ releases:
             enabled: true
           dashboards:
             enabled: true
-        defaultDashboardsEnabled: true
         persistence:
           enabled: true
           size: 1Gi
