--- a/helmfile.d/heimdall.yaml
+++ b/helmfile.d/heimdall.yaml
@@ -10,13 +10,14 @@ releases:
     chart: k8s-at-home/heimdall
     values:
       - ingress:
-          enabled: true
-          hosts:
-            - host: start.k8s.home.lex.la
-              paths:
-                - path: /
-          annotations:
-            traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          main:
+            enabled: true
+            annotations:
+              traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+            hosts:
+              - host: start.k8s.home.lex.la
+                paths:
+                  - path: /
         persistence:
           config:
             enabled: true
