--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -7,8 +7,7 @@
         "before 2am"
     ],
     "timezone": "Europe/Moscow",
-    "packageRules": [{
-        "managers": ["helmfile"],
+    "helmfile": {
         "fileMatch": "(^|/)helmfile.d\/.*\\.yaml$"
-    }]
+    }
 }
