--- a/charts/system-upgrade/system-upgrade.yaml
+++ b/charts/system-upgrade/system-upgrade.yaml
@@ -74,12 +74,14 @@ spec:
         envFrom:
         - configMapRef:
             name: default-controller-env
-        image: rancher/system-upgrade-controller:v0.6.2
+        image: rancher/system-upgrade-controller:v0.7.1
         imagePullPolicy: IfNotPresent
         name: system-upgrade-controller
         volumeMounts:
         - mountPath: /etc/ssl
           name: etc-ssl
+        - mountPath: /etc/pki
+          name: etc-pki
         - mountPath: /tmp
           name: tmp
       serviceAccountName: system-upgrade
@@ -89,10 +91,20 @@ spec:
       - effect: NoSchedule
         key: node-role.kubernetes.io/master
         operator: Exists
+      - effect: NoSchedule
+        key: node-role.kubernetes.io/control-plane
+        operator: Exists
+      - effect: NoExecute
+        key: node-role.kubernetes.io/etcd
+        operator: Exists
       volumes:
       - hostPath:
           path: /etc/ssl
           type: Directory
         name: etc-ssl
+      - hostPath:
+          path: /etc/pki
+          type: DirectoryOrCreate
+        name: etc-pki
       - emptyDir: {}
         name: tmp
