--- a/charts/system-upgrade/plans/regular/system-plan.yaml
+++ b/charts/system-upgrade/plans/regular/system-plan.yaml
@@ -8,8 +8,9 @@ type: Opaque
 stringData:
   upgrade.sh: |
     #!/bin/sh
-    apt update && apt upgrade -y
-    apt autoremove -y
+    apt-get update && apt-get --with-new-pkgs upgrade -y
+    apt-get autoremove -y
+    apt-get autoclean
     if [ -f /var/run/reboot-required ]; then
       reboot
     fi
