use storage classes
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/helmfile.d/ingress.yaml
+++ b/helmfile.d/ingress.yaml
@@ -48,6 +48,7 @@ releases:
           - "--global.checknewversion"
         persistence:
           enabled: true
+          storageClass: "longhorn-main"
         deployment:
           initContainers:
             # The "volume-permissions" init container is required if you run into permission issues.
