--- a/helmfile.d/monitoring.yaml
+++ b/helmfile.d/monitoring.yaml
@@ -72,6 +72,10 @@ releases:
                 url: "http://vmsingle-victoria-metrics-k8s-stack.monitoring.svc:8429"
                 access: proxy
                 isDefault: true
+              - name: Loki
+                type: loki
+                access: proxy
+                url: "http://loki-stack.monitoring.svc:3100"
         sidecar:
           datasources:
             enabled: true
@@ -81,3 +85,35 @@ releases:
           enabled: true
           size: 1Gi
           storageClassName: "longhorn-main"
+
+  - name: loki-stack
+    namespace: monitoring
+    chart: grafana/loki-stack
+    installed: true
+    values:
+      - loki:
+          persistence:
+            enabled: true
+            size: 20Gi
+            storageClassName: "longhorn-ssd"
+        promtail:
+          extraScrapeConfigs:
+            - job_name: journal
+              journal:
+                path: /var/log/journal
+                max_age: 12h
+                labels:
+                  job: systemd-journal
+              relabel_configs:
+                - source_labels: ['__journal__systemd_unit']
+                  target_label: 'unit'
+                - source_labels: ['__journal__hostname']
+                  target_label: 'hostname'
+          extraVolumes:
+            - name: journal
+              hostPath:
+                path: /var/log/journal
+          extraVolumeMounts:
+            - name: journal
+              mountPath: /var/log/journal
+              readOnly: true
