update charts delete actions runner
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/charts/system-upgrade/plans/regular/k3s-plan.yaml
+++ b/charts/system-upgrade/plans/regular/k3s-plan.yaml
@@ -1,7 +1,7 @@
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
 metadata:
-  name: server-plan
+  name: k3s-upgrade-server-plan
   namespace: system-upgrade
 spec:
   concurrency: 1
@@ -16,11 +16,12 @@ spec:
   upgrade:
     image: rancher/k3s-upgrade
   channel: https://update.k3s.io/v1-release/channels/latest
+
 ---
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
 metadata:
-  name: agent-plan
+  name: k3s-upgrade-agent-plan
   namespace: system-upgrade
 spec:
   concurrency: 1
