--- a/helmfile.d/actions-runner-controller.yaml
+++ b/helmfile.d/actions-runner-controller.yaml
@@ -6,7 +6,7 @@ releases:
   # https://github.com/actions-runner-controller/actions-runner-controller/blob/master/charts/actions-runner-controller/README.md
   - name: actions-runner-controller
     namespace: actions-runner-system
-    installed: true
+    installed: false
     chart: actions-runner-controller/actions-runner-controller
     values:
       - authSecret:
