add kill-kube-ns tool
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/helmfile.d/monitoring.yaml
+++ b/helmfile.d/monitoring.yaml
@@ -17,6 +17,8 @@ releases:
           spec:
             persistentVolume:
               storageClass: "longhorn-ssd"
+        victoria-metrics-operator:
+          createCRD: true
 
   # https://artifacthub.io/packages/helm/grafana/grafana
   - name: grafana
