update vm chart
Signed-off-by: Aleksey Sviridkin <f@lex.la>

--- a/helmfile.d/monitoring.yaml
+++ b/helmfile.d/monitoring.yaml
@@ -14,11 +14,9 @@ releases:
       - grafana:
           enabled: false
         vmsingle:
-          spec:
+          server:
             persistentVolume:
               storageClass: "longhorn-ssd"
-        victoria-metrics-operator:
-          createCRD: true
 
   # https://artifacthub.io/packages/helm/grafana/grafana
   - name: grafana
