--- a/charts/vk2tg/deployment.yaml
+++ b/charts/vk2tg/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: vk2tg
-          image: ghcr.io/lexfrei/vk2tg/vk2tg:sha-97eea0c
+          image: ghcr.io/lexfrei/vk2tg:latest@sha256:4afa13a67d97ec1aac0fe2821774ff598da315c4f002f8e36b34f7de1fbc0d1c
           envFrom:
             - secretRef:
                 name: vk2tg
